Updated API Gateway to support HttpOnly Sessions
oswfm-backend-startup.py  - Added support to clean (mvn clean) all microservices before startup

Updated API Gateway : Spring Session + BffAuthController + token injection filter
  ├─ POST /api/bff/auth/login  → calls userservice, stores tokens in session, returns user info
  ├─ GET  /api/bff/auth/me     → returns user info from session (401 if no session)
  ├─ POST /api/bff/auth/logout → invalidates tokens upstream + invalidates session
  └─ All other /api/**         → reads ACCESS_TOKEN from session, injects Bearer into upstream